revno: 20182 message:   event-capture: make sure drop-downs are not clipped
committer: Abyot Asalefew Gizaw <abyota@gmail.com>
branch nick: dhis2
timestamp: Wed 2015-09-16 16:48:17 +0200

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-event-capture/styles/style.css
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-event-capture/styles/style.css
@@ -98,7 +98,6 @@ div.paging a.active
     border-radius: 5px;
     padding: 12px;
     margin-bottom: 20px;
-    overflow: auto;
 }
 
 .nav, .pagination, .carousel, .panel-title a { 
